// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RulesOnly renders 1`] = `
<DocumentFragment>
  <div
    class="ruleDetailsGroup"
  >
    <mock-fullruleheader
      cardruleresult="[object Object]"
      deps="[object Object]"
      outcometype="pass"
    />
    <mock-fullruleheader
      cardruleresult="[object Object]"
      deps="[object Object]"
      outcometype="pass"
    />
    <mock-fullruleheader
      cardruleresult="[object Object]"
      deps="[object Object]"
      outcometype="pass"
    />
  </div>
</DocumentFragment>
`;

exports[`RulesOnly renders 2`] = `
{
  "cardRuleResult": {
    "id": "1",
  },
  "deps": {},
  "outcomeType": "pass",
}
`;

exports[`RulesOnly renders 3`] = `
{
  "cardRuleResult": {
    "id": "2",
  },
  "deps": {},
  "outcomeType": "pass",
}
`;

exports[`RulesOnly renders 4`] = `
{
  "cardRuleResult": {
    "id": "3",
  },
  "deps": {},
  "outcomeType": "pass",
}
`;
